--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root {
 --soft-blue: hsl(215, 51%, 70%);
 --cyan: hsl(178, 100%, 50%);
@@ -19,6 +25,79 @@
 }
 
 body {
+    background-color: var(--main-bg);
+    color: var(--white);
     font-family: "Outfit", sans-serif;
     font-size: 18px;
+    padding: 1.25rem;
+}
+
+.container {
+    background-color: var(--card-bg);
+    border-radius: 0.5rem;
+    padding: 1.25rem;
+}
+.container h2 {
+    color: var(--white);
+    margin: 1rem 0.5rem 0.5rem 0;
+}
+
+.container ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem 0;
+    border-bottom: 1px solid var(--line);
+}
+
+.container ul li {
+    display: flex;
+    align-items: center;
+}
+
+.container ul li img {
+    margin-right: 0.5rem;
+}
+
+.container ul li:first-child {
+    color: var(--cyan);
+}
+
+.container .avatar {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    padding-top: 2rem;
+}
+
+.container .avatar img {
+    width: 2.8rem;
+    border: 1px solid var(--white);
+    border-radius: 50%;
+    margin-right: 1.5rem;
+}
+
+.container .avatar p span {
+    color: var(--white);
+    font-weight: 400;
+}
+
+p {
+    font-weight: 300;
+}
+
+img {
+    border-radius: 0.5rem;
+    max-width: 100%;
+}
+
+ul {
+    list-style-type: none;
+}
+
+@media (min-width: 500px) {
+    .container {
+        margin: auto;
+        width: 450px;
+    }
 }
