--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@
 
 .attribution { 
     font-size: 12px; text-align: center; 
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%);
+    bottom: 10px;
 }
 
 .attribution a { 
@@ -26,20 +30,66 @@
 
 body {
     background-color: var(--main-bg);
-    color: var(--white);
+    color: hsl(0, 0%, 100%, 60%);
     font-family: "Outfit", sans-serif;
     font-size: 18px;
     padding: 1.25rem;
+}
+
+p {
+    font-weight: 300;
+}
+
+img {
+    border-radius: 0.5rem;
+    max-width: 100%;
+}
+
+ul {
+    list-style-type: none;
 }
 
 .container {
     background-color: var(--card-bg);
     border-radius: 0.5rem;
     padding: 1.25rem;
+    width: 350px;
 }
+
 .container h2 {
     color: var(--white);
     margin: 1rem 0.5rem 0.5rem 0;
+}
+
+.container .main-img {
+    position: relative;
+}
+
+.container .main-img .overlay {
+    position: absolute;
+    top: 0;
+    opacity: 0;
+    background-color: hsl(178, 100%, 50%, 60%);
+    border-radius: 0.5rem;
+    height: calc(100% - 5px);
+    width: 100%;
+}
+
+.container .main-img .overlay img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.container .main-img:hover .overlay {
+    opacity: 1;
+    cursor: pointer;
+}
+
+.container h2:hover {
+    color: var(--cyan);
+    cursor: pointer; 
 }
 
 .container ul {
@@ -67,12 +117,12 @@ body {
     display: flex;
     align-items: center;
     justify-content: start;
-    padding-top: 2rem;
+    padding-top: 1.5rem;
 }
 
 .container .avatar img {
     width: 2.8rem;
-    border: 1px solid var(--white);
+    border: 2px solid var(--white);
     border-radius: 50%;
     margin-right: 1.5rem;
 }
@@ -82,22 +132,15 @@ body {
     font-weight: 400;
 }
 
-p {
-    font-weight: 300;
-}
-
-img {
-    border-radius: 0.5rem;
-    max-width: 100%;
-}
-
-ul {
-    list-style-type: none;
+.container .avatar p span:hover {
+    color: var(--cyan);
+    cursor: pointer; 
 }
 
 @media (min-width: 500px) {
     .container {
         margin: auto;
-        width: 450px;
+        margin-top: 5rem;
+        width: 350px;
     }
 }
