--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ ul {
     border-radius: 0.5rem;
     height: calc(100% - 5px);
     width: 100%;
+    transition: opacity 0.4s ease;
 }
 
 .container .main-img .overlay img {
